setting up express example

--- a/example/ExpressJs/public/index.html
+++ b/example/ExpressJs/public/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <apiape-app>Loading app...</apiape-app>
-    <script src="/frontend.js"></script>
+    <app-root>Loading app...</app-root>
+    <script src="fe.js"></script>
   </body>
 </html>
